# extendedObjectStorage/app/controllers/object_controller.py
@@ -7,10 +7,12 @@ extendedStorage = ExtendedObjectStorage()
 
 
 def get_object():
-    res = get_object_service()
-    # res = get_examples_service()
-    return res, 200
-
+    args = request.args
+    object_path = args.get("objectPath")
+    obj_name = os.path.basename(object_path)
+    obj_path = os.path.dirname(object_path)
+    res = extendedStorage.get_object(obj_name, obj_path)
+    return res, res['status']
 
 def create_object():
     args = request.args
@@ -21,6 +23,22 @@ def create_object():
     res = extendedStorage.create_object(obj_name, obj_path, file)
     return res, res['status']
 
+def delete_object():
+    args = request.args
+    object_path = args.get("objectPath")
+    obj_name = os.path.basename(object_path)
+    obj_path = os.path.dirname(object_path)
+    res = extendedStorage.delete_object(obj_name, obj_path)
+    return res, res['status']
+
+def rename_object():
+    args = request.args
+    object_path = args.get("objectPath")
+    new_name = args.get("newName")
+    obj_name = os.path.basename(object_path)
+    obj_path = os.path.dirname(object_path)
+    res = extendedStorage.rename_object(obj_name, obj_path, new_name)
+    return res, res['status']
 
 def create_directory():
     res = extendedStorage.create_directory(request.get_json()['path'])
